# nexuscore

./: .gitignore  AGENTS.md  Dockerfile  README.md  cloud-build.yml  config.json  nexus.py  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/skills/new-model/: SKILL.md  (+1 more)
sql/: wiki_tables.sql
src/: base.py  database.py  errors.py  main.py  model_factory.py  pool.py  settings.py  user.py  utils.py
src/blueprints/: __init__.py  amethyst.py  cms.py  events.py  guilds.py  projects.py  quests.py  server.py  users.py
src/db/: event.py  pool.py  user.py
src/dependencies/: auth.py  database.py  r2_client.py  repositories.py  services.py
src/migrations/: 002_auth_migration.sql  env.py
src/models/: auth.py  base.py  events.py  guild.py  image.py  items.py  objects.py  project.py  quest.py  relay.py  user.py
src/repositories/: event.py  guild.py  objective.py  pin.py  project.py  quest.py  reward.py  user.py  world.py
src/routes/: __init__.py  auth.py  events.py  guild.py  guilds.py  image.py  leaderboard.py  pins.py  project.py  projects.py  quest_progress.py  quests.py  relay.py  server.py  user.py  users.py  wiki.py  world.py  wrapped.py
src/schema/: project_schema.py  user_schema.py
src/services/: event.py  guild.py  image.py  pin.py  project.py  quest.py  quest_progress.py  user.py  wiki.py  world.py
src/utils/: base.py  errors.py  minecraft_id.py
src/views/: guild.py  project.py  quest.py  user.py
tests/: conftest.py
tests/unit/: test_guild_service.py  test_project_service.py  test_quest_service.py  test_user_service.py
(+83 files in other folders)
