[project]
name = "nexuscore"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "argon2-cffi==25.1.0",
    "asyncpg==0.31.0",
    "boto3>=1.43.52",
    "boto3-stubs~=1.43.52",
    "fastapi[standard-no-fastapi-cloud-cli]==0.135.3",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pyjwt==2.12.1",
    "python-multipart==0.0.26",
    "scalar-fastapi==1.8.2",
    "sqlalchemy[asyncio]==2.0.41",
]
